--- a/large_table.html
+++ b/large_table.html
@@ -22,10 +22,9 @@
 </head>
 
 <body>
-	<form action="#" method="get" id="quicksearch">
-		<p><input type="text" name="qs" value="" id="qs"><input type="submit" value="Go"></p>
-	</form>
-
+	
+	<h1>Large Table</h1>
+	
     <table id="large" cellspacing="0">
     <thead>
     	<tr>
@@ -43,7 +42,7 @@
     	</tr>
     </thead>
     <tbody>
-    	<tr>
+		<tr>
     		<td>devo@flexomat.com</td>
 
     		<td>66672</td>
@@ -3559,11 +3558,8 @@
     		<td>1970/2/11</td>
     		<td>11/2/1970</td>
     	</tr>
-
-           
     </tbody>
     </table>
-
 </body>
 
 </html>
