--- a/list.html
+++ b/list.html
@@ -6,7 +6,6 @@
 		<title>rikrikrik - quickSearch jQuery plug-in - List items</title>
 		<script src="jquery.js" type="text/javascript" charset="utf-8"></script>
 		<script src="jquery.quicksearch.js" type="text/javascript" charset="utf-8"></script>
-		<script src="/mint/?js" type="text/javascript"></script>
 		<script type="text/javascript" charset="utf-8">
 			$(document).ready(function () {				
 				$('ul#a li').quicksearch({
@@ -30,13 +29,10 @@
 		<link rel="stylesheet" href="style.css" type="text/css" media="all" title="" />		
 	</head>
 	<body>
-	    
-	    <form action="#" method="get" id="quicksearch">
-			<p><input type="text" name="qs" value="" id="qs"><input type="submit" value="Go"></p>
-		</form>
 		
-	
-	    <ul id="a">
+		<h1>Lists</h1>
+	    
+	<ul id="a">
         <li>Afghanistan</li> 
         <li>Albania</li> 
         <li>Algeria</li> 
