--- a/paragraphs.html
+++ b/paragraphs.html
@@ -6,7 +6,6 @@
         <title>rikrikrik - quickSearch jQuery plug-in - Paragraphs</title>
 		<script src="jquery.js" type="text/javascript" charset="utf-8"></script>
 		<script src="jquery.quicksearch.js" type="text/javascript" charset="utf-8"></script>
-		<script src="/mint/?js" type="text/javascript"></script>
 		<script type="text/javascript" charset="utf-8">
 			$(document).ready(function () {
 								
@@ -29,7 +28,7 @@
 
 <body>
 	
-<h1>Page Title</h1>
+<h1>Paragraphs</h1>
     
 
 <p class="firsttwo">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Fusce erat purus, cursus semper, tincidunt sed, nonummy nec, nibh. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Fusce cursus placerat lacus. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Quisque viverra. Phasellus eros. In ut pede eget sapien rutrum gravida. Maecenas risus. Donec condimentum nisi id ante. Cras at enim. Sed non neque. Suspendisse a lacus. Sed interdum. Proin nisi elit, mollis id, vehicula quis, adipiscing ac, nunc. Praesent consequat dolor non mauris. Etiam ligula quam, dictum at, suscipit quis, tristique vel, velit. Curabitur vehicula orci et mauris. Vestibulum fringilla sem quis orci. Ut convallis. Aenean iaculis, tellus a fermentum fringilla, nibh ligula luctus ligula, id convallis lorem elit in neque.</p>
