--- a/table_quicker.html
+++ b/table_quicker.html
@@ -6,7 +6,6 @@
 		<title>rikrikrik - quickSearch jQuery plug-in - Tables</title>
 		<script src="jquery.js" type="text/javascript" charset="utf-8"></script>
 		<script src="jquery.quicksearch.js" type="text/javascript" charset="utf-8"></script>
-		<script src="/mint/?js" type="text/javascript"></script>
 		<script type="text/javascript" charset="utf-8">
 			$(document).ready(function () {				
 				$('table tbody tr').quicksearch({
@@ -20,7 +19,9 @@
 		</script>
 		<link rel="stylesheet" href="style.css" type="text/css" media="all" title="" />		
 	</head>
-	<body
+	<body>
+		
+	<h1>Quicker Table</h1>
 
 	<table cellspacing="0">
     <thead>
