--- a/index.html
+++ b/index.html
@@ -19,8 +19,7 @@
 					attached: 'table#table_example',
 					stripeRowClass: ['odd', 'even'],
 					labelText: 'Search the table',
-					delay: 100,
-					fixWidths: true
+					delay: 100
 				});
 			})
 		</script>
