Added "new" to documentation

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 		</script>
 	</head>
 	<body>
-		<h1>jQuery quickSearch <sup>version 2.0</sup></h1>
+		<h1>jQuery quickSearch <sup>version 2.0.1</sup></h1>
 	    
 		<ul>
 			<li><a href="#examples">Examples</a></li>
@@ -405,11 +405,11 @@ $(search_elements).quicksearch(options);
 			<dd>Adds a random string to quickSearch to differentiate between multiple searches</dd>
 			<dd class="default">default: 'qs'+Math.floor(Math.random()*1000000)</dd>
 			
-			<dt>isFieldset</dt>
+			<dt>isFieldset <span class="new">New</span></dt>
 			<dd>If you want a fieldset instead of a form, useful for developers using ASP.NET</dd>
 			<dd class="default">default: false</dd>
 			
-			<dt>fixWidths</dt>
+			<dt>fixWidths <span class="new">New</span></dt>
 			<dd>If using a table, fix the widths of table cells to stop row widths jumping when searching</dd>
 			<dd class="default">default: false</dd>
 		</dl>
