--- a/large_table.html
+++ b/large_table.html
@@ -5,7 +5,7 @@
     <head>
         <title>rikrikrik - quickSearch jQuery plug-in - Large table</title>
 		<script src="jquery.js" type="text/javascript" charset="utf-8"></script>
-		<script src="jquery.quicksearch.js" type="text/javascript" charset="utf-8"></script>
+		<script src="jquery.quicksearch.tidied.js" type="text/javascript" charset="utf-8"></script>
 		<script type="text/javascript" charset="utf-8">
 			$(document).ready(function () {
 				$('table#large tbody tr').quicksearch({
@@ -13,7 +13,8 @@
 					position: "before",
 					stripeRowClass: ['r1', 'r2', 'r3'],
 					labelText: null,
-					inputText: 'Search table'
+					inputText: 'Search table',
+					delay: 200
 				});
 			});			
 		</script>
