added show/hide options, moved examples into folder

--- a/examples/index.html
+++ b/examples/index.html
@@ -7,7 +7,7 @@
 		<link rel="stylesheet" href="style.css" type="text/css" media="all" title="" />
 		
 		<script type="text/javascript" src="jquery.js" ></script>
-		<script type="text/javascript" src="jquery.quicksearch.js"></script>
+		<script type="text/javascript" src="../jquery.quicksearch.js"></script>
 		<script type="text/javascript">
 			$(function () {
 				$('input#id_search').quicksearch('table#table_example tbody tr', {
