--- a/examples/large_table.html
+++ b/examples/large_table.html
@@ -5,7 +5,7 @@
     <head>
         <title>rikrikrik - quickSearch jQuery plug-in - Large table</title>
 		<script src="jquery.js" type="text/javascript" charset="utf-8"></script>
-		<script src="jquery.quicksearch.tidied.js" type="text/javascript" charset="utf-8"></script>
+		<script src="../jquery.quicksearch.js" type="text/javascript" charset="utf-8"></script>
 		<script type="text/javascript" charset="utf-8">
 			$(document).ready(function () {
 				$('table#large tbody tr').quicksearch({
