--- a/examples/super_table.html
+++ b/examples/super_table.html
@@ -3,7 +3,7 @@
 	<head>
 		<title>Super table</title>
 		<script type="text/javascript" src="jquery.js"></script>
-		<script type="text/javascript" src="jquery.quicksearch.js"></script>
+		<script type="text/javascript" src="../jquery.quicksearch.js"></script>
 		<script type="text/javascript">
 			$(document).ready(function () {
 				$("#id_search").quicksearch("table tbody tr", {
