--- a/examples/table.html
+++ b/examples/table.html
@@ -5,7 +5,7 @@
 		<meta http-equiv="Content-type" content="text/html; charset=utf-8" />
 		<title>rikrikrik - quickSearch jQuery plug-in - Tables</title>
 		<script src="jquery.js" type="text/javascript" charset="utf-8"></script>
-		<script src="jquery.quicksearch.js" type="text/javascript" charset="utf-8"></script>
+		<script src="../jquery.quicksearch.js" type="text/javascript" charset="utf-8"></script>
 		<script type="text/javascript" charset="utf-8">
 			$(document).ready(function () {				
 				$('table#t1 tbody tr th').quicksearch({
