preparing for launch

--- a/examples/super_table.html
+++ b/examples/super_table.html
@@ -2,8 +2,8 @@
 <html>
 	<head>
 		<title>Super table</title>
-		<script type="text/javascript" src="jquery.js"></script>
-		<script type="text/javascript" src="../jquery.quicksearch.js"></script>
+		<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.4/jquery.min.js"></script>
+		<script type="text/javascript" src="http://github.com/riklomas/quicksearch/raw/dev/jquery.quicksearch.js"></script>
 		<script type="text/javascript">
 			$(document).ready(function () {
 				$("#id_search").quicksearch("table tbody tr", {
@@ -39,7 +39,7 @@
 
 <tbody>
 	<tr id="noresults">
-		<td colspan="6">Noresults</td>
+		<td colspan="6">No Results</td>
 	</tr>
 	
 <tr>
