cosmetic changes to examples

--- a/examples/index.html
+++ b/examples/index.html
@@ -74,17 +74,15 @@
 		<table id="table_example">
 			<thead>
 				<tr>
-
-					<th>Email</th>
-					<th>Id</th>
-					<th>Phone</th>
-					<th>Total</th>
-					<th>Ip</th>
-					<th>Url</th>
-
-					<th>Time</th>
-					<th>ISO Date</th>
-					<th>UK Date</th>
+					<th width="30%">Email</th>
+					<th width="10%">Id</th>
+					<th width="10%">Phone</th>
+					<th width="10%">Total</th>
+					<th width="10%">Ip</th>
+					<th width="10%">Url</th>
+					<th width="10%">Time</th>
+					<th width="10%">ISO Date</th>
+					<th width="10%">UK Date</th>
 				</tr>
 			</thead>
 			<tbody>
@@ -292,7 +290,7 @@
 					<td>941-964-1599</td>
 					<td>$1176.48</td>
 					<td>104.212.122.177</td>
-					<td>http://donutsxxxxxxxxxxxxxxxxx.com</td>
+					<td>http://donutsx.com</td>
 					<td>18:52</td>
 
 					<td>2000/8/6</td>
@@ -306,7 +304,7 @@
 $('input#id_search').quicksearch('table#table_example tbody tr');
 </pre></code>
 
-<h3>Example with options</h3>
+<h3>Example with options (only on &lt;th&gt;)</h3>
 
 
 <form action="#">
@@ -318,17 +316,15 @@ $('input#id_search').quicksearch('table#table_example tbody tr');
 <table id="table_example2">
 	<thead>
 		<tr>
-
-			<th>Email</th>
-			<th>Id</th>
-			<th>Phone</th>
-			<th>Total</th>
-			<th>Ip</th>
-			<th>Url</th>
-
-			<th>Time</th>
-			<th>ISO Date</th>
-			<th>UK Date</th>
+			<th width="30%">Email</th>
+			<th width="10%">Id</th>
+			<th width="10%">Phone</th>
+			<th width="10%">Total</th>
+			<th width="10%">Ip</th>
+			<th width="10%">Url</th>
+			<th width="10%">Time</th>
+			<th width="10%">ISO Date</th>
+			<th width="10%">UK Date</th>
 		</tr>
 	</thead>
 	<tbody>
@@ -536,7 +532,7 @@ $('input#id_search').quicksearch('table#table_example tbody tr');
 			<td>941-964-1599</td>
 			<td>$1176.48</td>
 			<td>104.212.122.177</td>
-			<td>http://donutsxxxxxxxxxxxxxxxxx.com</td>
+			<td>http://donutsx.com</td>
 			<td>18:52</td>
 
 			<td>2000/8/6</td>
