--- a/examples/index.html
+++ b/examples/index.html
@@ -7,7 +7,7 @@
 		<link rel="stylesheet" href="style.css" type="text/css" media="all" title="" />
 		
 		<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.4/jquery.min.js"></script>
-		<script type="text/javascript" src="http://github.com/riklomas/quicksearch/raw/dev/jquery.quicksearch.js"></script>
+		<script type="text/javascript" src="../jquery.quicksearch.js"></script>
 		<script type="text/javascript">
 			$(function () {
 				/*
