--- a/examples/super_table.html
+++ b/examples/super_table.html
@@ -3,7 +3,7 @@
 	<head>
 		<title>Super table</title>
 		<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.4/jquery.min.js"></script>
-		<script type="text/javascript" src="http://github.com/riklomas/quicksearch/raw/dev/jquery.quicksearch.js"></script>
+		<script type="text/javascript" src="../jquery.quicksearch.js"></script>
 		<script type="text/javascript">
 			$(document).ready(function () {
 				$("#id_search").quicksearch("table tbody tr", {
