Fixed wrong path

--- a/examples/super_table.html
+++ b/examples/super_table.html
@@ -27,7 +27,7 @@
 		})(window, document, console);
 		</script>
 		<!--script src="http://ajax.googleapis.com/ajax/libs/jquery/1.4/jquery.min.js"></script-->
-		<script src="../jquery.quicksearch.js"></script>
+		<script src="../src/jquery.quicksearch.js"></script>
 		<script>
 			$(document).ready(function () {
 				$("#id_search").quicksearch("table tbody tr", {
