Make sure the results are reseted if the value is too small

--- a/examples/super_table.html
+++ b/examples/super_table.html
@@ -33,7 +33,8 @@
 				$("#id_search").quicksearch("table tbody tr", {
 					noResults: '#noresults',
 					stripeRows: ['odd', 'even'],
-					loader: 'span.loading'
+					loader: 'span.loading',
+					minValLength: 2
 				});
 			});
 		</script>
