As per #3, made the plugin listen to the search event as well

--- a/examples/super_table.html
+++ b/examples/super_table.html
@@ -45,7 +45,7 @@
 	
 		<form action="#">
 			<fieldset>
-				<input type="text" name="search" value="" id="id_search" /> <span class="loading">Loading...</span>
+				<input type="search" name="search" value="" id="id_search" /> <span class="loading">Loading...</span>
 			</fieldset>
 		</form>	
 		
